--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
+        "bootstrap-icons": "^1.13.1",
         "concurrently": "^9.0.1",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^1.2.0",
+        "sass": "^1.93.2",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.8",
+        "inputmask": "^5.0.9",
+        "sweetalert2": "^11.23.0",
+        "toastr": "^2.1.4"
     }
 }
