--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.8",
+        "chart.js": "^4.5.0",
         "inputmask": "^5.0.9",
         "sweetalert2": "^11.23.0",
         "toastr": "^2.1.4"
